# CrazyEngine

./: CMakeLists.txt  ContentLoader.cpp
include/CrazyEngine/: Application.h  Defines.h
include/CrazyEngine/Audio/: Audio.h  Sound.h
include/CrazyEngine/Core/: Clock.h  Input.h
include/CrazyEngine/Graphics/: BufferLayout.h  Buffers.h  RenderItem.h  Renderer2D.h  RendererAPI.h  RendererState.h  Shader.h  Texture.h  TextureFont.h  Vertex.h  VertexArray.h
include/CrazyEngine/Graphics/OpenGL/: OpenGLBuffers.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h
include/CrazyEngine/Math/: Calculator.h  Duration.h  Matrix4.h  Rectangle.h  Vector2.h  Vector3.h  Vector4.h
include/CrazyEngine/Platform/: Platform.h
shaders/: shader.frag  shader.vert
src/: Application.cpp
src/Audio/: Audio.cpp  Sound.cpp
src/Core/: Clock.cpp  Input.cpp
src/Graphics/: BufferLayout.cpp  Buffers.cpp  RenderItem.cpp  Renderer2D.cpp  RendererAPI.cpp  RendererState.cpp  Shader.cpp  Texture.cpp  TextureFont.cpp  VertexArray.cpp
src/Graphics/OpenGL/: OpenGLBuffers.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp
src/Math/: Calculator.cpp  Duration.cpp  Matrix4.cpp  Rectangle.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Platform/: PlatformWin32.cpp
